<resources>
    <string name="app_name">Eten enz meetingen</string>

    <string-array name="drawer_options">
        <item>@string/nav_eten</item>
        <item>@string/nav_drinken</item>
        <item>@string/nav_poep</item>
        <item>@string/nav_buikpijn</item>
        <item>@string/nav_resultaten_eten</item>
        <item>@string/nav_resultaten_drinken</item>
        <item>@string/nav_resultaten_poep</item>
        <item>@string/nav_resultaten_buikpijn</item>
    </string-array>

    <string name="nav_eten">Eten</string>
    <string name="nav_drinken">Drinken</string>
    <string name="nav_poep">Poepen</string>
    <string name="nav_buikpijn">Buikpijn</string>
    <string name="nav_resultaten_poep">Resultaten Poep</string>
    <string name="nav_resultaten_buikpijn">Resultaten Buikpijn</string>
    <string name="nav_resultaten_eten">Resultaten Eten</string>
    <string name="nav_resultaten_drinken">Resultaten Drinken</string>

    <string name="notification_eten_add">Deze eet melding is opgeslagen</string>
    <string name="notification_eten_delete">Deze eet melding is verwijderd</string>
    <string name="notification_eten_fail_delete">ERROR er is een fout opgetreden bij het verwijderen van deze eet melding</string>
    <string name="notification_eten_fail_fields">ERROR de noodzakelijke velden zijn niet ingevuld, de eet melding is NIET opgeslagen</string>

    <string name="notification_drinken_add">Deze drinken melding is opgeslagen</string>
    <string name="notification_drinken_delete">Deze drinken melding is verwijderd</string>
    <string name="notification_drinken_fail_delete">ERROR er is een fout opgetreden bij het verwijderen van deze drink melding</string>
    <string name="notification_drinken_fail_fields">ERROR de noodzakelijke velden zijn niet ingevuld, de drink melding is NIET opgeslagen</string>

    <string name="notification_poep_add">Deze poep melding is opgeslagen</string>
    <string name="notification_poep_delete">Deze poep melding is verwijderd</string>
    <string name="notification_poep_fail_delete">ERROR er is een fout opgetreden bij het verwijderen van deze poep melding</string>
    <string name="notification_poep_fail_fields">ERROR de noodzakelijke velden zijn niet ingevuld, de poep melding is NIET opgeslagen</string>

    <string name="notification_buikpijn_add">Deze buikpijn melding is opgeslagen</string>
    <string name="notification_buikpijn_add_start">Het begin van deze buikpijn melding is gemaakt, deze moet verder nog afgemaakt worden. De eind tijden moet nog ingevult worden</string>
    <string name="notification_buikpijn_add_start_fail">Je kunt geen nieuwe melding maken als de oude nog niet compleet is, vul deze eerst aan.</string>
    <string name="notification_buikpijn_delete">Deze buikpijn melding is verwijderd</string>
    <string name="notification_buikpijn_fail_delete">ERROR er is een fout opgetreden bij het verwijderen van deze buikpijn melding</string>vvvvvvvvvvvvvv
    <string name="notification_buikpijn_fail_fields">ERROR de noodzakelijke velden zijn niet ingevuld, de buikpijn melding is NIET opgeslagen</string>

    <string name="database_name">etenEnzMededelingDatabase</string>

    <string name="eind_datum">Eind datum</string>
    <string name="eind_tijd">Eind tijd</string>
    <string name="opmerkingen">Opmerkingen</string>
    <string name="start_datum">Start datum</string>
    <string name="start_tijd">Start tijd</string>

    <integer name="database_verion">1</integer>
</resources>
