<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/textBuikpijnStartDate"
        android:hint="@string/start_datum"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:focusable="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:layout_below="@+id/textBuikpijnStartTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp"
        android:id="@+id/textBuikpijnEindDate"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/eind_datum"
        android:focusable="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/textBuikpijnEindTime"
        android:hint="@string/eind_tijd"
        android:layout_below="@+id/textBuikpijnEindDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:focusable="false" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/textBuikpijnEindTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:id="@+id/textBuikpijnComments"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/opmerkingen"
        android:focusable="false" />

    <Button
        android:text="Opslaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buikpijnSave"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="117dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/textBuikpijnStartTime"
        android:hint="@string/start_tijd"
        android:layout_below="@+id/textBuikpijnStartDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:focusable="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>